@@ -514,6 +514,7 @@ MSW:
   wxWebViewIE to improve the default behaviour (Allonii).
 - Update stretchable spaces in wxToolBar after tool removal (Catalin Raceanu).
 - Add support for horizontal mouse wheel events (Lauri Nurmi).
+- Implement wxGraphicsContext::SetInterpolationQuality() (Eric Jarvi).
 
 OSX:
 
